feat(JAQPOT-114): send request to inference api (#25)
* feat(JAQPOT-114): send request to inference api

* feat: send test request to jaqpot-inference

* fix: compilation error

* feat: complete end-to-end with prediction request

* fix: make async method run properly async
