# src/main/kotlin/org/jaqpot/api/service/model/ModelService.kt
@@ -5,10 +5,15 @@ import org.jaqpot.api.auth.AuthenticationFacade
 import org.jaqpot.api.auth.UserService
 import org.jaqpot.api.mapper.toDto
 import org.jaqpot.api.mapper.toEntity
+import org.jaqpot.api.model.DatasetDto
 import org.jaqpot.api.model.ModelDto
+import org.jaqpot.api.repository.DatasetRepository
 import org.jaqpot.api.repository.ModelRepository
+import org.springframework.data.repository.findByIdOrNull
+import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Service
+import org.springframework.web.server.ResponseStatusException
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder
 import java.net.URI
 
@@ -17,7 +22,8 @@ import java.net.URI
 class ModelService(
     private val authenticationFacade: AuthenticationFacade,
     private val modelRepository: ModelRepository,
-    private val userService: UserService
+    private val userService: UserService,
+    private val predictionService: PredictionService, private val datasetRepository: DatasetRepository
 ) : ModelApiDelegate {
     override fun createModel(modelDto: ModelDto): ResponseEntity<Unit> {
         val userId = authenticationFacade.userId
@@ -36,6 +42,24 @@ class ModelService(
             ResponseEntity.ok(it.toDto(user))
         }
             .orElse(ResponseEntity.notFound().build())
+    }
+
+    override fun predictWithModel(modelId: Long, datasetDto: DatasetDto): ResponseEntity<Unit> {
+        if (datasetDto.type == DatasetDto.Type.PREDICTION) {
+            val model = this.modelRepository.findByIdOrNull(modelId)
+                ?: throw ResponseStatusException(HttpStatus.NOT_FOUND, "Model with id $modelId not found")
+            val userId = authenticationFacade.userId
+            val dataset = this.datasetRepository.save(datasetDto.toEntity(model, userId))
+
+            this.predictionService.executePredictionAndSaveResults(model, dataset)
+
+            val location: URI = ServletUriComponentsBuilder
+                .fromCurrentRequest().path("/{id}")
+                .buildAndExpand(dataset.id).toUri()
+            return ResponseEntity.created(location).build()
+        }
+
+        throw ResponseStatusException(HttpStatus.BAD_REQUEST, "Unknown dataset type", null)
     }
 }
 
