# src/main/resources/openapi.yaml
@@ -69,6 +69,39 @@ paths:
                 $ref: '#/components/schemas/Model'
         '404':
           description: Model not found
+  /v1/models/{modelId}/predict:
+    post:
+      summary: Predict with Model
+      description: Submit a dataset for prediction using a specific model
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - model
+      operationId: predictWithModel
+      parameters:
+        - name: modelId
+          in: path
+          required: true
+          description: The ID of the model to use for prediction
+          schema:
+            type: integer
+            format: int64
+            example: 0
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Dataset'
+      responses:
+        '201':
+          description: Prediction created successfully
+        '400':
+          description: Invalid Request
+        '404':
+          description: Model not found
+        '500':
+          description: Internal Server Error
 components:
   securitySchemes:
     bearerAuth:
@@ -202,6 +235,56 @@ components:
           type: LocalDateTime
           description: The date and time when the feature was last updated.
           example: '2023-01-01T12:00:00Z'
+    Dataset:
+      type: object
+      required:
+        - type
+        - input
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        type:
+          type: string
+          enum:
+            - PREDICTION
+          example: "PREDICTION"
+        input:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataEntry'
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/DataEntry'
+        created_at:
+          type: LocalDateTime
+        updated_at:
+          type: LocalDateTime
+    DataEntry:
+      type: object
+      required:
+        - type
+        - values
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        created_at:
+          type: LocalDateTime
+        updated_at:
+          type: LocalDateTime
+        type:
+          type: string
+          enum:
+            - ARRAY
+          example: "ARRAY"
+        values:
+          type: array
+          items: { }
+
     User:
       title: User
       x-stoplight:
@@ -216,3 +299,5 @@ components:
           type: string
           x-stoplight:
             id: x0pm25vavfibz
+    AnyValue:
+      description: Can be any value - string, number, boolean, array or object.
